--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
-  "name": "cypress",
+  "name": "study_cypress",
   "version": "1.0.0",
   "description": "CYPRESS TESTING PROJECT FOR AUTOMATION",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "cy:open": "cypress open",
+    "cy:run": "cypress run"
   },
   "keywords": [],
   "author": "",
@@ -16,5 +17,11 @@
   "bugs": {
     "url": "https://github.com/sachinsakpal87/cypress/issues"
   },
-  "homepage": "https://github.com/sachinsakpal87/cypress#readme"
+  "homepage": "https://github.com/sachinsakpal87/cypress#readme",
+  "devDependencies": {
+    "cypress": "^5.0.0"
+  },
+  "dependencies": {
+    "prettier": "^2.1.1"
+  }
 }
