--- a/.prettierrc
+++ b/.prettierrc
@@ -1,9 +1,11 @@
 {
-  "semi": true,
-  "singleQuote": true,
-  "useTabs": true,
-  "tabWidth": 2,
-  "bracketSpacing": true,
-  "arrowParens": "avoid",
-  "trailingComma": "es5"
+    "semi": true,
+    "singleQuote": true,
+    "useTabs": false,
+    "tabWidth": 4,
+    "bracketSpacing": true,
+    "arrowParens": "avoid",
+    "trailingComma": "es5",
+    "printWidth": 100,
+    "htmlWhitespaceSensitivity":strict
 }
